...
          return '${widget.hint} is required';
        }
        // ✅ لو الـ field بتاع email
  if (widget.hint == 'Email') {
    final emailRegex = RegExp(r'^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$');
    if (!emailRegex.hasMatch(value)) {
      return 'Please enter a valid email';
    }
  }

  // ✅ لو الـ field بتاع password
  if (widget.hint == 'Password') {
    if (value.length < 6) {
      return 'Password must be at least 6 characters';
    }
  }

  return null;
      },
      onChanged: widget.onChanged,
...
